--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,92 @@
+/*layout*/
+
 body {
 	width:100%;
 	height:100%;
-	background-color:red;
+	background-color:rgb(65,77,80);
+	font-family: 'Candara';
+}
+
+#banner {
+	width:100%;
 }
 
 nav {
-	width:50%;
-	height:5em;
-	background-color:green;
-	margin-left: 10%;
-	margin-right:10%;
-	
+	height:2em;
+	margin-top:.5em;
+	margin-bottom:.5em;
+	background-color:rgb(109,137,74);
+	border-style:solid;
+	border-width:5px;
+	border-color:rgb(65,77,80);
 }
 
 #side {
-	width:10em;
-	height:30em;
-	background-color:yellow;
-	margin-left:10%;
+
+	height:38em;
+	background-color:rgb(106,102,93);
+	position:relative;
+	border-style:solid;
+	border-width:5px;
+	border-color:rgb(65,77,80);
 }
 
 #main {
-	width: 50em;
-	height: 30em;
-	background-color:blue;
-	margin-left:10%;
+	height: 100%;
+	background-color:rgb(241,245,250);
+
+}
+
+footer {
+	background-color:rgb(109,137,74);	
+	height:5em;
+}
+
+/*Content*/
+
+#menu li{
+	
+	display:inline;
+	position:relative;
+	list-style-type:none;
+	padding:3.25em;
+	left:-2em;
+	bottom:.75em;
+	text-align:left;
+	font-size:20px;
+}
+
+#sidebanner {
+	position:relative;
+	font-weight:bold;
+	text-align:center;
+	font-size:1.5em;
+	border-bottom: 5px solid rgb(65,77,80);
+	line-height:50px;
+	top: -1em;
+}
+
+#side li{
+	position:relative;
+	list-style-type:none;
+	top:-2em;
+	left:-.5em;
+	width:100%;
+	padding:5px;
+}
+
+#contentbanner {
+	position:relative;
+	font-weight:bold;
+	text-align:left;
+	font-size:1.5em;
+	border-bottom: 5px solid rgb(65,77,80);
+	line-height:50px;
+}
+
+
+/*unsemantic override*/
+
+.grid-container {
+	max-width:1000px !important;
 }
