--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ nav {
 	border-style:solid;
 	border-width:5px;
 	border-color:rgb(65,77,80);
+	text-justify:distribute-all-lines;
 }
 
 #side {
@@ -29,31 +30,43 @@ nav {
 	border-style:solid;
 	border-width:5px;
 	border-color:rgb(65,77,80);
+	z-index:1;
 }
 
 #main {
-	height: 100%;
+	height:42em;
 	background-color:rgb(241,245,250);
 
 }
 
 footer {
 	background-color:rgb(109,137,74);	
-	height:5em;
+	height:2em;
+	border-top-color:rgb(65,77,80);
+	border-top-style:solid;
+	border-top-width:5px;
 }
 
 /*Content*/
 
-#menu li{
-	
-	display:inline;
+nav ul{
+	width:100%;
+	margin:0 auto;
+	padding:0;
+	list-style:none;
+	text-align:center;	
+}
+
+nav li{
 	position:relative;
+	display:inline-block;
+	width:19%;
 	list-style-type:none;
-	padding:3.25em;
-	left:-2em;
-	bottom:.75em;
-	text-align:left;
+	padding:0;
+	margin:0;
 	font-size:20px;
+	left:-1em;
+	bottom:1px;
 }
 
 #sidebanner {
@@ -75,16 +88,81 @@ footer {
 	padding:5px;
 }
 
-#contentbanner {
+h1 {
 	position:relative;
 	font-weight:bold;
 	text-align:left;
 	font-size:1.5em;
 	border-bottom: 5px solid rgb(65,77,80);
 	line-height:50px;
+	left:.5em;
+	max-width:10em;
 }
 
+h3 {
 
+	float:left;
+	position:relative;
+	left:2em;
+}
+
+#content p{
+	max-width:22em;
+	float:left;
+	margin:1em;
+}
+
+#content ul {
+	float:left;	
+	position:relative;
+	left:2em;
+	top:-1em;
+}
+
+#content li {
+	padding:10px;	
+}
+
+.image {
+	border: 5px solid rgb(65,77,80);
+}
+
+#img1 {
+	float:right;
+	position:relative;
+	top:-2em;
+}
+
+#img2 {
+
+	float:left;
+	margin: 1em 0 1em 10;
+}
+
+#cards{
+	float:right;
+	position:relative;
+	left:1em;
+
+}
+
+a:link {
+	text-decoration:none;
+	color:black;
+}
+
+a:visited {
+	color: black;	
+}
+
+a:hover {
+	color: rgb(241,245,250);
+}
+
+footer p {
+	font-size:10px;	
+	text-align:right;
+}
 /*unsemantic override*/
 
 .grid-container {
